    (Simon)

9.  Points (in particular, pch = 1) have more accurate radii. (Simon)

10. Raster grobs can be drawn. (Simon)

11. Every grob is now grouped in a <g> element. The group receives the name
    of the original grob but any elements that will be produced from that
    grob will receive the grob name with an integer suffix. (Simon)

Changes from 0.5-10 to 0.6-0
============================

1.  Updated for the fact that R graphics engine now supports
    complex paths.

    Removed grid.path() and pathGrob() from this package
    (now in 'grid' package)

    Removed svgGrobify() 
    (the normal grobify() in 'grImport' now handles complex paths)

    Tweaked passage of 'grid' pathgrob through generic device to
    SVG device.
    

Changes from 0.5-8 to 0.5-10
===========================

1.  conversion of gpar() to SVG CSS now recognises 'fillrule'
    (so that pathgrobs [and polgyons] can specify "nonzero" or "evenodd")

2.  svgGrobify() passes object@rule from PictureFill objects
    to gpar() so that 'fill' and 'eofill' from imported images
    will be represented by appropriate paths in SVG.

3.  The current locale encoding (i.e., the encoding used to
    write the SVG file) is now recorded in the SVG file.


Changes from 0.5-3 to 0.5-8
===========================

1.  Added 'redraw' argument to grid.garnish()

2.  Improved sizing of text 
    (especially when it is controlled via 'cex')

3.  Correction for rotated text 
    (SVG measures angles clock-wise)

4.  Improved recording of SVG 'style' attribute so that it
    handles vectorized settings better.

5.  Improved recording of 'lty' setting in SVG output.

6.  Forced ALL gpar settings from grid to SVG output
    (i.e., no longer have to EXPLICITLY set gpars).

7.  Added checks for XML specials when producing SVG output.

8.  Improved sizing of text (and line widths) to be responsive
    to device resolution.

9.  Added grid.path() and pathGrob() which can be used to draw 