@@ -32,6 +32,10 @@ Changes from 0.6-0 to 0.7-0
     of the original grob but any elements that will be produced from that
     grob will receive the grob name with an integer suffix. (Simon)
 
+12. Points grobs have been refactored and its parameters now obey the
+    recycling rule. Grouping occurs where points require multiple
+    elements. (Simon)
+
 Changes from 0.5-10 to 0.6-0
 ============================
 
